--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   android_intent_plus: ^3.1.1
   device_apps: ^2.2.0
   liquid_pull_to_refresh: ^3.0.1
+  animated_splash_screen: ^1.3.0
+  splashscreen: ^1.3.5
+  share_plus: ^4.0.10+1
+  rate_my_app: ^1.1.3
 
 
 dev_dependencies:
