--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,12 +67,17 @@ dependencies:
   splashscreen: ^1.3.5
   share_plus: ^4.0.10+1
   rate_my_app: ^1.1.3
+  flutter_launcher_icons: ^0.10.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   animated_text_kit: ^4.2.2
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assest/icon/1024.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
